--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview --host"
   },
   "dependencies": {
+    "@fontsource/pacifico": "^5.1.1",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
